Made the navbar bigger and fixed the explore button on safari

--- a/src/styles/Header/Header.scss
+++ b/src/styles/Header/Header.scss
@@ -48,6 +48,10 @@ header {
           cursor: pointer;
         }
 
+        &:hover span {
+          display: none;
+        }
+
         span {
           position: absolute;
           display: block;
